Tiny refactor